FIX: scrollbar in login or signup

--- a/src/public/auths/style.css
+++ b/src/public/auths/style.css
@@ -74,7 +74,6 @@ body {
 .left-sidesign,
 .right-sidelog {
   background-color: #f8ead8;
-  overflow-y: scroll;
 }
 
 .form form {
